<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="top"
    android:orientation="vertical"
    android:layout_margin="2dp">

    <TextView
        android:id="@+id/calculator_text_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="80sp"
        android:textAlignment="textEnd"
        android:textStyle="bold"
        android:lines="2"
        android:maxLines="2"/>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:orientation="horizontal"
        android:layout_margin="2dp"
        android:textSize="30sp">

        <Button
            android:id="@+id/clear_button"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:layout_margin="2dp"
            android:textSize="30sp"
            android:text="@string/clear_button"
            app:cornerRadius="10dp"/>

        <Button
            android:id="@+id/plus_minus_button"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:layout_margin="2dp"
            android:textSize="30sp"
            android:text="@string/plus_minus_button"
            app:cornerRadius="10dp" />

        <Button
            android:id="@+id/percent_button"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:layout_margin="2dp"
            android:textSize="30sp"
            android:text="@string/percent_button"
            app:cornerRadius="10dp" />

        <Button
            android:id="@+id/divide_button"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:layout_margin="2dp"
            android:textSize="30sp"
            android:text="@string/divide_button"
            app:cornerRadius="10dp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:orientation="horizontal"
        android:layout_margin="2dp">

        <Button
            android:id="@+id/seven_button"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:layout_margin="2dp"
            android:textSize="30sp"
            android:text="@string/seven_button"
            app:cornerRadius="10dp"/>

        <Button
            android:id="@+id/eight_button"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:layout_margin="2dp"
            android:textSize="30sp"
            android:text="@string/eight_button"
            app:cornerRadius="10dp"/>

        <Button
            android:id="@+id/nine_button"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:layout_margin="2dp"
            android:textSize="30sp"
            android:text="@string/nine_button"
            app:cornerRadius="10dp" />

        <Button
            android:id="@+id/multiply_button"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:layout_margin="2dp"
            android:textSize="30sp"
            android:text="@string/multiply_button"
            app:cornerRadius="10dp"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:orientation="horizontal"
        android:layout_margin="2dp">

        <Button
            android:id="@+id/four_button"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:layout_margin="2dp"
            android:textSize="30sp"
            android:text="@string/four_button"
            app:cornerRadius="10dp"/>

        <Button
            android:id="@+id/five_button"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:layout_margin="2dp"
            android:textSize="30sp"
            android:text="@string/five_button"
            app:cornerRadius="10dp"/>

        <Button
            android:id="@+id/six_button"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:layout_margin="2dp"
            android:textSize="30sp"
            android:text="@string/six_button"
            app:cornerRadius="10dp" />

        <Button
            android:id="@+id/subtract_button"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:layout_margin="2dp"
            android:textSize="30sp"
            android:text="@string/subtract_button"
            app:cornerRadius="10dp"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:orientation="horizontal"
        android:layout_margin="2dp">

        <Button
            android:id="@+id/one_button"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:layout_margin="2dp"
            android:textSize="30sp"
            android:text="@string/one_button"
            app:cornerRadius="10dp"/>

        <Button
            android:id="@+id/two_button"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:layout_margin="2dp"
            android:textSize="30sp"
            android:text="@string/two_button"
            app:cornerRadius="10dp"/>

        <Button
            android:id="@+id/three_button"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:layout_margin="2dp"
            android:textSize="30sp"
            android:text="@string/three_button"
            app:cornerRadius="10dp" />

        <Button
            android:id="@+id/add_button"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:layout_margin="2dp"
            android:textSize="30sp"
            android:text="@string/add_button"
            app:cornerRadius="10dp"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:layout_margin="2dp"
        android:orientation="horizontal">

        <Button
            android:id="@+id/zero_button"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="2"
            android:layout_margin="2dp"
            android:textSize="30sp"
            android:text="@string/zero_button"
            app:cornerRadius="10dp"/>

        <Button
            android:id="@+id/decimal_button"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="3"
            android:layout_margin="2dp"
            android:textSize="30sp"
            android:text="@string/decimal_button"
            app:cornerRadius="10dp"/>

        <Button
            android:id="@+id/equals_button"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="3"
            android:layout_margin="2dp"
            android:textSize="30sp"
            android:text="@string/equals_button"
            app:cornerRadius="10dp" />

    </LinearLayout>

</LinearLayout>